--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "thezenmonkey/silverstripe-gallery",
+	"name": "thezenmonkey/gallery",
 	"description": "SilverStripe Gallery Module",
 	"type": "silverstripe-module",
 	"keywords": ["silverstripe","image gallery","gallery"],
